--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <div id="category-section" class="section mt-5">
       <hr>
-      <div id="status-columns" class="columns is-flex">
+      <div id="status-columns" class="columns">
         <div class="column">
           <div class="container mt-4 ">
             <div class="container filter-button is-flex is-justify-content-space-between">
