add margin top on todo section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div id="status-columns" class="columns">
         <div id="column-scheduled" class="column">
           <div class="container mt-4 ">
-            <div class="container filter-button is-flex is-justify-content-space-between">
+            <div class="container filter-button is-flex is-justify-content-space-between mb-4">
               <p class="in-progress">Scheduled:</p>
               <div class="select is-small">
                 <select>
@@ -106,6 +106,7 @@
         </div>
       </div>
     </div>    
+    <hr>
   </section>
   <footer class="footer">
     <div class="content has-text-centered">
