add close small step functionality

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <div class="todo-item">
                 <div class="box todo">
                   I'm and example todo
-                  <button class="delete hidden is-pulled-right" aria-label="close"></button>
+                  <button class="delete delete-main hidden is-pulled-right" aria-label="close"></button>
                </div>
   
   <!-- container / progress bar sa detaljima i koracima za HIDE/SHOW -->
